# model_storage

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
model_storage/: app.py
